--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -8,6 +8,7 @@
     <FrameLayout
         android:id="@+id/titleLayout"
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_height="70dp">
 
         <TextView
